--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -1,1 +1,85 @@
+= '''socsport''' Documentation
+
+== Comment installer ?
+
+= Installation de SocSport
+
+== 0. Prérequis
+Assurez-vous d'avoir Python installé sur votre machine avec une version compatible (Python 3.12 ou supérieur recommandé). Vous pouvez vérifier si Python est installé en exécutant `python --version` dans votre terminal. Dans le cas où Python n'est pas installé, vous pouvez le faire en suivant les instructions sur le site officiel de Python : link:https://www.python.org/downloads/[Installation de Python].
+
+== 1. Installation de Flask
+Vous pouvez installer Flask en lançant votre terminal de commande en tant qu'administrateur puis en entrant cette ligne de commande :
+[source, shell]
+----
+pip install Flask
+----
+
+== 2. Installation de Node.js
+Si vous n'avez pas Node.js installé sur votre système, vous pouvez dans un premier temps le télécharger sur le site officiel : link:https://nodejs.org/fr[Installation de Node.js].
+
+== 3. Clonage du projet
+Maintenant que Node.js et Flask sont installés, vous pouvez cloner le dépôt Github de SocSport sur votre machine locale en utilisant la commande suivante :
+[source, shell]
+----
+git clone https://github.com/mfrj22/socsport.git
+----
+
+== 4. Installation des librairies Python
+Pour notre projet, nous avons utilisé différentes bibliothèques Python :
+
+* SQLAlchemy permet d'intégrer une base de données SQL dans notre application Flask.
+[source, shell]
+----
+pip install Flask-SQLAlchemy
+----
+
+* PyMySQL permet d'assurer la connectivité et la communication avec notre base de données MySQL.
+[source, shell]
+----
+pip install pymysql
+----
+
+* Cryptography est utilisé pour renforcer la sécurité.
+[source, shell]
+----
+pip install cryptography
+----
+
+* Geopy gère les opérations de géolocalisation (calcul de distances entre des points géographiques).
+[source, shell]
+----
+pip install geopy
+----
+
+* PyTest permet d'exécuter des tests unitaires.
+[source, shell]
+----
+pip install pytest
+----
+
+== 4. Installation des modules React
+Pour le bon fonctionnement de notre application, nous avons ajouté des modules React :
+[source, shell]
+----
+npm install
+npm install react-router-dom
+npm install react-slick slick-carousel
+----
+
+== Lancement de l'Application
+Vous êtes maintenant prêt à lancer l'application ! Utilisez la commande suivante pour démarrer le serveur de développement :
+[source, shell]
+----
+npm start
+----
+
+Pour lancer l'API Flask, il vous faudra lancer un terminal depuis la racine du projet puis lancer cette ligne de commande :
+[source, shell]
+----
+python app.py
+----
+
+L'application sera disponible à l'adresse : link:http://localhost:3000[http://localhost:3000]
+
+L'API Flask sera disponible à l'adresse : link:http://localhost:5000[http://localhost:5000]
 
