--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -78,7 +78,49 @@ Pour lancer l'API Flask, il vous faudra lancer un terminal depuis la racine du p
 ----
 python app.py
 ----
+== 5. Diagramme UML
 
+Pour visualiser la structure du modèle, nous avons créé un diagramme UML à l'aide de PlantUML. Voici le contenu du fichier `model.puml` :
+
+[plantuml, model.puml]
+----
+!includeurl https://raw.githubusercontent.com/plantuml/plantuml-icon-font-sprites/v1.2023.3/common.puml
+
+@startuml model
+
+class Ville {
+  + id: Integer
+  + nom: String
+  + code_postal: Integer
+  + departement: String
+}
+
+class Terrain {
+  + id: Integer
+  + nom: String
+  + adresse: String
+  + latitude: Float
+  + longitude: Float
+  + ville_id: Integer
+  + ville: Ville
+}
+
+class Evenement {
+  + id: Integer
+  + nom: String
+  + date: Date
+  + heure_debut: Time
+  + heure_fin: Time
+  + terrain_id: Integer
+  + terrain: Terrain
+}
+
+Ville "1" -- "*" Terrain : has
+Terrain "1" -- "*" Evenement : has
+
+@enduml
+
+----
 L'application sera disponible à l'adresse : link:http://localhost:3000[http://localhost:3000]
 
 L'API Flask sera disponible à l'adresse : link:http://localhost:5000[http://localhost:5000]
