--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -131,4 +131,31 @@ Terrain "1" -- "*" Evenement : has
 @enduml
 ----
 
+Diagramme de séquence :
+
+----
+@startuml diagsec
+
+actor User
+participant App
+participant Vue
+participant Controller
+participant Terrain
+participant Evenement
+participant Database
+
+User -> App: Send request to create event
+App -> Vue: Handle user input
+Vue -> Controller: Request to create event
+Controller -> Terrain: Get terrain details
+Terrain --> Controller: Terrain details
+Controller -> Evenement: Create new event
+Evenement --> Controller: New event created
+Controller -> Database: Save event to database
+Database --> Controller: Event saved
+Controller --> Vue: Event created successfully
+Vue --> App: Notify user about event creation
+
+@enduml
+----
 
