--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -95,8 +95,7 @@ python app.py
 == 7. Diagramme de classe 
 
 ----
-@startuml model
-
+@startuml
 class Ville {
   + id: Integer
   + nom: String
@@ -110,8 +109,8 @@ class Terrain {
   + adresse: String
   + latitude: Float
   + longitude: Float
-  + ville_id: Integer
-  + ville: Ville
+  + horaire_ouverture: Time
+  + horaire_fermeture: Time
 }
 
 class Evenement {
@@ -120,78 +119,109 @@ class Evenement {
   + date: Date
   + heure_debut: Time
   + heure_fin: Time
-  + terrain_id: Integer
-  + terrain: Terrain
+  + nb_participants: Integer
 }
 
-Ville "1" -- "*" Terrain : has
-Terrain "1" -- "*" Evenement : has
+class Sport {
+  + id: Integer
+  + name: String
+}
 
+class Reservation {
+  + id: Integer
+  + nom_participant: String
+  + prenom_participant: String
+  + email_participant: String
+  + tel_participant: String
+}
+
+Ville "1" -- "*" Terrain : a
+Terrain "1" -- "*" Evenement : a
+Evenement "1" -- "0..1" Terrain : a
+Evenement "1" -- "*" Reservation : a
+Sport "1" -- "*" Terrain : a
+Sport "1" -- "*" Reservation : a
 @enduml
 ----
 
 == 8. Diagramme de séquence 
 
 ----
-@startuml diagsec
-
+@startuml
 actor User
-participant App
-participant Vue
-participant Controller
-participant Terrain
-participant Evenement
-participant Database
+participant Client
+participant FlaskApp
+database Database
 
-User -> App: Send request to create event
-App -> Vue: Handle user input
-Vue -> Controller: Request to create event
-Controller -> Terrain: Get terrain details
-Terrain --> Controller: Terrain details
-Controller -> Evenement: Create new event
-Evenement --> Controller: New event created
-Controller -> Database: Save event to database
-Database --> Controller: Event saved
-Controller --> Vue: Event created successfully
-Vue --> App: Notify user about event creation
+User -> Client: Send POST request /nearest-fields
+activate Client
 
+Client -> FlaskApp: Handle POST /nearest-fields
+activate FlaskApp
+
+FlaskApp -> Database: Query all terrains
+activate Database
+
+Database --> FlaskApp: Return terrain data
+deactivate Database
+
+FlaskApp --> Client: Return JSON response
+deactivate FlaskApp
+
+Client --> User: Return nearest fields data
+deactivate Client
 @enduml
 ----
 
 == 9. Diagramme entité/association 
 
 ----
-@startuml diagEA
-
+@startuml
 entity "Ville" {
   + id: Integer
-  --
-  + nom: String
-  + code_postal: Integer
-  + departement: String
+  nom: String
+  code_postal: Integer
+  departement: String
 }
 
 entity "Terrain" {
   + id: Integer
-  --
-  + nom: String
-  + adresse: String
-  + latitude: Float
-  + longitude: Float
+  nom: String
+  adresse: String
+  latitude: Float
+  longitude: Float
+  horaire_ouverture: Time
+  horaire_fermeture: Time
 }
 
 entity "Evenement" {
   + id: Integer
-  --
-  + nom: String
-  + date: Date
-  + heure_debut: Time
-  + heure_fin: Time
+  nom: String
+  date: Date
+  heure_debut: Time
+  heure_fin: Time
+  nb_participants: Integer
 }
 
-Ville --o{ Terrain : "has"
-Terrain --o{ Evenement : "has"
+entity "Sport" {
+  + id: Integer
+  name: String
+}
 
+entity "Reservation" {
+  + id: Integer
+  nom_participant: String
+  prenom_participant: String
+  email_participant: String
+  tel_participant: String
+}
+
+Ville --{ Terrain
+Terrain --{ Evenement
+Evenement }--|> Terrain
+Evenement --{ Reservation
+Sport --{ Terrain
+Sport --{ Reservation
 @enduml
 ----
 
