--- a/web/frontend/src/docs/asciidoc/main.adoc
+++ b/web/frontend/src/docs/asciidoc/main.adoc
@@ -129,7 +129,7 @@ L'API OpenRouteService (basée sur OpenStreetMap) est utilisée dans SocSport po
 
 Ces deux API, OpenWeatherMap et OpenRouteService (OpenStreetMap), sont des éléments clés de l'infrastructure de SocSport, contribuant à une expérience utilisateur complète et offrant des fonctionnalités pratiques pour la planification et la réalisation d'activités sportives.
 
-== Conteneurisation 
+== 8. Conteneurisation 
 
 Afin de regrouper toutes les dépendances de notre application, nous avons mis en place des conteneurs : un pour le front, un pour le back, et un pour la base de données.
 Nous avons également mis en place des scripts afin d'automatiser le processus de création et de lancement de nos conteneurs.
